Moving icon-sprite style to early loaded CSS file to avoid unknown style and late application of display: none and flickering

--- a/src/main/resources/static/css/custom-icons.css
+++ b/src/main/resources/static/css/custom-icons.css
@@ -1,10 +1,5 @@
 /* Custom Icon System */
 
-/* Hide the icon sprite SVG (CSP-compliant, no inline styles) */
-.icon-sprite {
-    display: none;
-}
-
 .icon {
     display: inline-block;
     width: 1em;
